# geofrenzy

./: .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  EULA.md  README.md  holdtwo.json  large.json  package.xml  parking.json  two.json
include/blink1/: Blink1.h  blinkfn.h
include/geofrenzy/: gf_geojson.h
launch/: colordemo.launch  colordemofakegps.launch  colordemofakegpsparking.launch  gf_launch.launch  gf_uas_demo.launch  newcolordemo.launch  newdemo.launch  newrvizdemo.launch  roverdemo-office.launch  roverdemo.launch  testgfnode.launch  testviz.launch
msg/: GeoPolygon.msg  GfDistFeature.msg  GfDistFeatureCollection.msg  GfDwellBoolset.msg  GfDwellColor.msg  GfDwellJson.msg  GfDwellProfile.msg  GfDwellThreshold.msg  GfEntBoolset.msg  GfEntColor.msg  GfEntHeader.msg  GfEntJson.msg  GfEntProfile.msg  GfEntTVP.msg  GfEntThreshold.msg  GfGeoFeature.msg  GfGeoFeatureCollection.msg  GfJsonFeatureCollection.msg  Polygon64.msg  StringStamped.msg  entitlement.msg  gf_class.msg  gf_entitlement.msg
notes/: mavnotes.txt  uasseq.txt
samples/: README.md  class_ent_168.json
samples/fences/: 2x3_fence.json  figure8_fences.json  playground_fences.json  shape_fences.json
samples/shapes/: 2x3.json  figure8.json  hexagon.json  rectangle.json  tee.json  triangle.json
scripts/: fix.sh  latlongmeters.py  subtend.py  tfstatic.sh
src/: EntitlementToBlink.cpp  README.md  blink1_node.cpp  color_mux_node.py  colordemofakegps.launch  geofrenzy.h  gf.cfg  gf_breach_inhibitor.cpp  gf_color.cpp  gf_color_pub.cpp  gf_gps_test.cpp  gf_map_server.cpp  gf_map_server2.cpp  gf_math.cpp  gf_math.h  gf_node.cpp  gf_poly.cpp  gf_poly.h  gf_ros.cpp  gf_ros.h  gf_scene.cpp  gf_scene.h  gf_sensor_relay.cpp  gf_sentinel.cpp  gf_sentinel.h  gf_server.cpp  gf_types.h  gf_vcloud.cpp  gf_vsensor_rgbd.cpp  hiddata.cpp  map_to_laser.cpp  mapserver.h  mapviz.launch  newcolordemo.launch  newcolordemo.launch.wwp  roverdemo-park-fakegps.launch  roverdemo-swa.launch  roverdemo.launch  testpc.cpp
srv/: GetEntitlement.srv  GetEntitlementList.srv  SetGeofenceAlt.srv  class_service.srv  entitlement_list_service.srv  entitlement_service.srv
